
Package: R.utils
================

Version: 1.9.1 [2011-11-05]
o Added default 'width' and 'height' values to eps().
o Added devOptions().


Version: 1.9.0 [2011-11-03]
o Added queryRCmdCheck(), which retrieves the status of 'R CMD check',
  iff it is running.


Version: 1.8.8 [2011-11-01]
o Added argument 'dims' to extract() for arrays.  Also, argument 'drop'
  was moved to the end.


Version: 1.8.7 [2011-11-01]
o CLEANUP: Fixed a R CMD check NOTE that would show up in R v2.15.0 devel.


Version: 1.8.6 [2011-10-31]
o Added argument 'field' to devEval().


Version: 1.8.5 [2011-10-16]
o CORRECTION: Arguments$getNumerics(c(Inf), disallow="Inf") would report
  that it contains "NA" instead of "Inf" values.


Version: 1.8.4 [2011-10-08]
o Now the default for argument 'methods' of createLink() can be set
  via option "createLink/args/methods".


Version: 1.8.3 [2011-09-30]
o Added installPackages() for installing R packages by names or URLs.
  This method was previously in the hbLite.R script of braju.com.


Version: 1.8.2 [2011-09-24]
o devNew() no longer gives a warning about argument 'aspectRatio' is
  specified when both or neither of 'width' and 'height' are given,
  and 'aspectRatio' is 1.
o Internal readDWord() and readQWord() of readWindowsShortcut() would
  try read 4- and 8-byte integers as non-signed, which is not supported
  by base::readBin() and hence instead read as signed integers.
  Starting with R v2.13.1 this would generate a lot of warnings.


Version: 1.8.1 [2011-09-19]
o Now System$mapDriveOnWindows(), System$unmapDriveOnWindows(), and
  System$getMappedDrivesOnWindows() also handles Windows UNC paths
  (i.e. network resource).  This was triggered by a discussion with
  Keith Jewell at Campden BRI Group, UK.
o WORKAROUND: isDirectory("C:/") would not return TRUE due to a
  bug in file.info("C:/") causing it to return NAs.
o Now attachLocally() returns a character vector also of length 
  zero.  Before NULL was returned.

